--- a/style/TechWave.css
+++ b/style/TechWave.css
@@ -56,3 +56,148 @@ align-items: center;
 border-radius: 10000px;
 background: linear-gradient( #9100F8, #FB09B4, #F7E93F);
 }
+/* banner section */
+
+.banner-section{
+    align-content: center;
+    justify-items: center;
+    background-image: url(../assets/hero-bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 650px;
+}
+.banner-section img{
+     margin: 50px 60px 40px 110px;
+
+}
+
+.banner-title{
+    text-align: center;
+    font-weight: 800;
+    font-size: 4rem;
+    
+}
+.banner-description{
+  font-size: 12px;
+  line-height: 19px;
+  text-align: center;
+  font-weight: 400;
+  margin-top: 10px;
+}
+.spotify-btn{
+    width: 200px;
+    height: 44px;
+    border-radius: 10000px;
+    background: linear-gradient(#9100F8 , #FB09B4,#F7E93F);
+}
+.Subscribe{
+    width: 147px;
+    height: 44px;
+    color: #00FF88;
+     border-radius: 10000px;
+     border: 1px solid #00FF88;
+     background-color: transparent;
+
+}
+.btn-head{
+    justify-content: center;
+    gap: 10px;
+    margin-top: 20px;
+}
+.tooltip{
+   position: absolute;
+   top: 23%;
+}
+.tooltip-btn{
+    width: 65px;
+    height: 30px;
+    border: 8px;
+    border-radius: 1000px;
+    background-color: #00FF88;
+}
+/* nav hidden */
+.hidden-nav{
+    display: flex;
+    justify-content: space-between;
+}
+.hidden-nav{
+    display: none;
+}
+/* about section */
+.about-section{
+    max-width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+}
+.about-title{
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 58px;
+    text-transform: capitalize;
+    margin-top: 50px;
+
+}
+.about-description{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+    margin-top: 16px;
+}
+.about-description-2{
+     font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+    margin-top: 26px;
+    margin-bottom: 50px;
+    
+}
+.review-section{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 80px;
+    gap: 60px;
+}
+.review-title{
+    color: #00FF88;
+    font-size: 47px;
+    font-weight: 900;
+
+}
+.review-description{
+     margin-top: 16px;
+     font-size: 16px;
+     font-weight: 400;
+     line-height: 24px;
+     text-transform: uppercase;
+}
+
+
+
+
+
+
+
+/* responsive */
+
+@media screen and (max-width:576px){
+    .hidden-nav{
+    display: flex;
+    justify-content: space-between;
+}
+    .hidden-nav img{
+        margin-right: 10px;
+    }
+    .navbar{
+        display: none;
+    }
+    .banner-section img{
+     width: 60%;
+
+}
+
+
+
+}
