--- a/style/TechWave.css
+++ b/style/TechWave.css
@@ -67,25 +67,42 @@ background: linear-gradient( #9100F8, #FB09B4, #F7E93F);
     width: 100%;
     height: 650px;
 }
-.banner-section img{
-     margin: 50px 60px 40px 110px;
+/* .banner-section img{
+     margin: 50px 60px 40px 110px; */
 
-}
+
 .container{
     display: flex;
     background-image: url(../assets/hero-circle.png);
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
+    position: relative;
+    background-position: center;
+    width: 400px;
+    height: 350px;
+    margin-left: 80px;
 }
+
 .container img{
-  width: 100%;
-
-
-
+  width: 30%;
 
 }
+.tooltip-btn{
+    position: absolute;
+    text-align: center;
+    padding: 3PX;
+    right: -4%;
+    top: 20%;
+
+}
+
+
+
+
+
+
 .banner-title{
     text-align: center;
     font-weight: 800;
@@ -289,6 +306,92 @@ background: linear-gradient( #9100F8, #FB09B4, #F7E93F);
    border-radius: 40px;
  }
 
+ /* episode-section style */
+ .episodes-section{
+    max-width: 1000px;
+    margin: 0 auto;
+    justify-items: center;
+    margin-top: 60px;
+ }
+
+ .episode-container{
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    gap: 50px;
+ }
+ .episode-title{
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+ }
+ .episodes-1{
+    width: 380px;
+    height: 300px;
+    background-color: #351165;
+    border-radius: 20px;
+    
+ }
+ .episodes-title{
+    font-size: 16px;
+    font-weight: 700;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    padding: 5px;
+ }
+ .episodes-discription{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    padding: 3px;
+ }
+ .clock{
+    display: flex;
+    padding-left: 5px;
+ }
+
+ /* host-section style */
+ .host-section{
+    max-width: 1000px;
+    margin: 0 auto;
+    justify-items: center;
+    margin-top: 70px;
+ }
+ .host-container{
+    display: flex;
+    background-color: #351165;
+    align-items: center;
+    padding: 40px;
+    border-radius: 40px;
+    gap: 24px;
+    justify-content: flex-start;
+
+ }
+ .hoster-title{
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 30px;
+ }
+ .host-title{
+    font-size: 20px;
+    text-transform: capitalize;
+    font-weight: 700;
+    margin-bottom: 10px;
+ }
+ .host-description{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 24px;
+    margin-bottom: 10px;
+
+ }
+
+
+
 
 
 
@@ -313,6 +416,43 @@ background: linear-gradient( #9100F8, #FB09B4, #F7E93F);
      width: 60%;
 
 }
+.review-section{
+   flex-direction: row;
+   flex-wrap: wrap;
+}
+ 
+ .techwave{
+    max-width: 576px;
+    margin: 0 auto;
+    display: grid;
+    /* margin-left: 220px; */
+    grid-template-columns: repeat(1, 1fr);
+     grid-template-rows: repeat(1, 1fr);
+     gap: 30px;
+   
+
+ }
+ .container img{
+  width: 30%;
+
+}
+
+.episode-container{
+    flex-direction: column;
+}
+ .episodes-1{
+    width: 300px;
+    height: 310px;
+ }
+ .host-container{
+    flex-direction: column;
+
+ }
+ .host-title{
+   text-align: center;
+ }
+
+
 
 
 
